# MHE

Lab3/: Porównanie.txt
Lab3/Zadanie3Porownanie/: PythonTime.txt  main.py
Lab3/Zadanie3_cpp/: CMakeLists.txt  CppTime.txt  README.md  main.cpp
Zad4/Zadanie4/: main.cpp
Zadanie3/: main.cpp
Zadanie3/Zadanie3/: main.cpp
Zadanie4/: main.cpp
Zadanie5/: main.cpp  script.sh
Zadanie6/: Dane.txt  HillClimbing.xlsx  HillClimbingDet.xlsx  Pomiar-lab5.txt  Przeglad.xlsx  funkcje.h  funkcjeImpl.cpp  hillclimbdet.txt  main.cpp
Zadanie7/: CMakeLists.txt  Dane.txt  HillClimbingDet.xlsx  RandomSampling.xlsx  Tabu.xlsx  Zad7_porownanie  funkcje.h  funkcjeImpl.cpp  hillclimbdet.txt  hillclmb.txt  main.cpp  przeglad.txt  rndsam.txt  script.sh  test.txt
zadanie1/: CMakeLists.txt  config.json  main.cpp
zadanie2/: CMakeLists.txt  README.md  main.cpp
