cmake_minimum_required(VERSION 3.21)
project(zadanie1)

set(CMAKE_CXX_STANDARD 14)

include_directories(nlohmann)
include_directories(nlohmann/detail)
include_directories(nlohmann/detail/conversions)
include_directories(nlohmann/detail/input)
include_directories(nlohmann/detail/iterators)
include_directories(nlohmann/detail/meta)
include_directories(nlohmann/detail/meta/call_std)
include_directories(nlohmann/detail/output)
include_directories(nlohmann/thirdparty)
include_directories(nlohmann/thirdparty/hedley)

add_executable(zadanie1
        nlohmann/detail/conversions/from_json.hpp
        nlohmann/detail/conversions/to_chars.hpp
        nlohmann/detail/conversions/to_json.hpp
        nlohmann/detail/input/binary_reader.hpp
        nlohmann/detail/input/input_adapters.hpp
        nlohmann/detail/input/json_sax.hpp
        nlohmann/detail/input/lexer.hpp
        nlohmann/detail/input/parser.hpp
        nlohmann/detail/input/position_t.hpp
        nlohmann/detail/iterators/internal_iterator.hpp
        nlohmann/detail/iterators/iter_impl.hpp
        nlohmann/detail/iterators/iteration_proxy.hpp
        nlohmann/detail/iterators/iterator_traits.hpp
        nlohmann/detail/iterators/json_reverse_iterator.hpp
        nlohmann/detail/iterators/primitive_iterator.hpp
        nlohmann/detail/meta/call_std/begin.hpp
        nlohmann/detail/meta/call_std/end.hpp
        nlohmann/detail/meta/cpp_future.hpp
        nlohmann/detail/meta/detected.hpp
        nlohmann/detail/meta/identity_tag.hpp
        nlohmann/detail/meta/is_sax.hpp
        nlohmann/detail/meta/std_fs.hpp
        nlohmann/detail/meta/type_traits.hpp
        nlohmann/detail/meta/void_t.hpp
        nlohmann/detail/output/binary_writer.hpp
        nlohmann/detail/output/output_adapters.hpp
        nlohmann/detail/output/serializer.hpp
        nlohmann/detail/abi_macros.hpp
        nlohmann/detail/exceptions.hpp
        nlohmann/detail/hash.hpp
        nlohmann/detail/json_custom_base_class.hpp
        nlohmann/detail/json_pointer.hpp
        nlohmann/detail/json_ref.hpp
        nlohmann/detail/macro_scope.hpp
        nlohmann/detail/macro_unscope.hpp
        nlohmann/detail/string_concat.hpp
        nlohmann/detail/string_escape.hpp
        nlohmann/detail/value_t.hpp
        nlohmann/thirdparty/hedley/hedley.hpp
        nlohmann/thirdparty/hedley/hedley_undef.hpp
        nlohmann/adl_serializer.hpp
        nlohmann/byte_container_with_subtype.hpp
        nlohmann/json.hpp
        nlohmann/json_fwd.hpp
        nlohmann/ordered_map.hpp
        config.json
        main.cpp)
